fixes mobile layout issue

--- a/style.css
+++ b/style.css
@@ -80,7 +80,6 @@ body {
   }
 
   #enquiriesForm {
-    width: 50%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
